// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-1"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-6 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-8 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="makeStyles-titleRoot-9 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1r9rzg6-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-2 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1c01ggb-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-gq5jh7-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-10"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-15 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-17 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="makeStyles-titleRoot-18 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1w85r6d-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-11 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1w0n7z2-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-q8ru1j-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-19"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-24 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-26 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="makeStyles-titleRoot-27 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-bdrn9d-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-20 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-xxikd4-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1m9ygoa-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
